[tool.poetry]
name = "poetry-on-docker"
version = "0.1.0"
description = ""
authors = ["Leonardo Esparis <ljesparis@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_on_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
